test/invalidImports/a.ts
import { XX } from "ts-morph";
import { X, Y as YY } from "./b";
import { X as XX, Y } from "./b";
import { c1, c2, c3 } from "./b";

console.log(X);
console.log(YY);
